fixed CSS to be more readable

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,14 +14,11 @@
  *= require_self
  */
 
- @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed');
-@import url('https://fonts.googleapis.com/css?family=Homemade+Apple');
-@import url('https://fonts.googleapis.com/css?family=Rock+Salt');
+ @import url('https://fonts.googleapis.com/css?family=Amatic+SC|Shadows+Into+Light');
 
  .error_explanation {
    color: red;
    background-color: white;
-   font-family:
 
 
 
@@ -44,9 +41,9 @@
  .header-list{
      float: left;
      color: white;
-     text-align: center;
-     font-family: 'IBM Plex Sans Condensed', sans-serif;
-     font-size: 15px;
+     text-align: right;
+     font-family: 'Amatic SC', cursive;
+     font-size: 25px;
      padding: 15px 20px;
      margin-left: 20px;
      text-decoration: none;
@@ -60,8 +57,8 @@
  h1 {
    margin-top: 40px;
    text-align: center;
-   font-family: "Rock Salt", cursive;
-   font-size: 60px;
+   font-family: "Shadows Into Light", cursive;
+   font-size: 70px;
    color: 	 #004d99;
 
  }
