--- a/app/assets/stylesheets/categories.css.scss
+++ b/app/assets/stylesheets/categories.css.scss
@@ -4,16 +4,16 @@
 
 
 h3 {
-  font-family: "Rock Salt", cursive;
-  font-size: 35px;
+  font-family: "Shadows Into Light", cursive;
+  font-size: 45px;
   color: #004d99;
   margin-left: 20px;
 
 }
 
 p{
-
-font-size: 20px;
+font-family: "Amatic SC", cursive;
+font-size: 30px;
 color: black;
 margin-left: 20px;
 
@@ -34,5 +34,5 @@ h4 {
 
 
 body{
-  font-family: 'IBM Plex Sans Condensed', sans-serif;
+  font-family: 'Amatic SC', cursive;
 }
